# vlax

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: smoke_test.py
scripts/: pre_commit.bash
vlax/: model_components.py  registry.py  sharding.py  train.py  train_state.py  types.py  utils.py  wandb_utils.py
vlax/bc/: eval_step.py  train_step.py
vlax/data/: dataset.py
vlax/load/: __init__.py  load_fns.py
vlax/models/: optimizer.py  vla.py  vla_predict.py
vlax/models/big_vision/: __init__.py  common.py  gemma.py  gemma_bv.py  paligemma.py  predict_fns.py  registry.py  utils.py  vit.py
vlax/sequence/: __init__.py  action_tokenizer.py  language_tokenizer.py  sequence.py  sequence_builder.py
vlax/visualization/: filmstrip.py
